--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/seec_erp?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
     username: root
-    password: root
+    password: 654321
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
@@ -10,6 +10,7 @@ mybatis:
   type-aliases-package: com.nju.edu.erp.model.po
   configuration:
     map-underscore-to-camel-case: true
+  typeHandlersPackage: com.nju.edu.erp.enums.handlers
 
 jwt:
   secret: 6e12d69c-af21-4cc2-b32d-3fa949b50106
