--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,9 +2,10 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/seec_erp?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
     username: root
-    password: 654321
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+server:
+  port: 8081
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.nju.edu.erp.model.po
